Common/F.txt
In file included from DateTimes.hpp:4,
                 from DateTimesTest.cpp:7:
Date.hpp: In function ‘const ItemT& Get(const Date&)’:
Date.hpp:177:101: error: parse error in template argument list
  177 | const ItemT& Get(Date const& d) { auto t = std::make_tuple(d.day,d.month,d.year);       return std::get<T>(t);  };
      |                                                                                                     ^~~~~~
make: *** [<eingebaut>: *.o] Fehler 1
